Connected backend with the frontend (needs improvements)
