# server/Application/Models/Dtos/UserManagement/UsersDetailsDto.cs
@@ -1,10 +1,11 @@
-using System.ComponentModel.DataAnnotations;
+using Application.Models.Dtos.Project;
 using Core.Domain.Entities;
 
 namespace Application.Models.Dtos.UserManagement;
 
-public class UpdateResponseDto
+public class UsersDetailsDto
 {
+    public string UserId { get; set; }
     public string Email { get; set; } = null!;
     public string FirstName { get; set; } = null!;
     public string LastName { get; set; } = null!;
@@ -14,12 +15,14 @@ public class UpdateResponseDto
     public bool? IsActive { get; set; }
     public bool? IsDeleted { get; set; }
     public DateTime? CreatedAt { get; set; }
+    public List<ProjectDto> Projects { get; set; }
     
     
-    public static UpdateResponseDto FromEntity(User user)
+    public static UsersDetailsDto FromEntity(User user)
     {
-        return new UpdateResponseDto
+        return new UsersDetailsDto
         {
+            UserId = user.Id.ToString(),
             FirstName = user.Firstname,
             LastName = user.Lastname,
             Email = user.Email,
@@ -28,7 +31,8 @@ public class UpdateResponseDto
             Language = user.Language,
             IsActive =  user.Isactive,
             IsDeleted =   user.Isdeleted,
-            CreatedAt = user.Createdat
+            CreatedAt = user.Createdat,
+            Projects = ProjectDto.FromEntityToList(user.Projects.ToList())
         };
     }
 }
